plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1' // 3.3.4
	id 'io.spring.dependency-management' version '1.1.5' // 1.1.7
}

group = 'com.okagaka'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'software.amazon.awssdk:s3:2.31.35' // 버전은 최신으로
	implementation 'software.amazon.awssdk:auth'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// STT
	implementation 'com.google.cloud:google-cloud-speech:4.56.0'
	implementation 'com.google.auth:google-auth-library-oauth2-http:1.33.1'
//	implementation 'com.google.protobuf:protobuf-java:4.30.2'

	// gRPC 채널
	implementation "io.grpc:grpc-netty-shaded:1.70.0"
//	implementation "io.grpc:grpc-okhttp:1.70.0"

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'


	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // or jjwt-gson

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	//runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}

tasks.named('test') {
	useJUnitPlatform()
}

jar {
	enabled = false
}
